Tests/Conformance/Generated/Builtin/Constant/Bytestring/Bytestring_04.lean
-- Auto-generated by gen_conformance_tests.py — do not edit manually.
import Tests.Conformance.ConformanceUtils
import PlutusCore.UPLC.ScriptEncoding.Basic

namespace Tests.Conformance.Generated.Builtin.Constant.Bytestring.Bytestring_04

open Tests.Conformance

/-- error: Parsing error -/
#guard_msgs in
#conformance_import_uplc builtin_constant_bytestring_bytestring_04 "../.plutus-conformance/plutus-conformance/test-cases/uplc/evaluation/builtin/constant/bytestring/bytestring-04/bytestring-04.uplc"

end Tests.Conformance.Generated.Builtin.Constant.Bytestring.Bytestring_04
